# lmfit

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt
cmake/: CheckDependencies.cmake
cpplib/: CMakeLists.txt  lmfit.hpp
demo/: CMakeLists.txt  curve2.c  surface1.c
democpp/: CMakeLists.txt  curve1.cpp  curve1cpp.cpp  curve2cpp.cpp  nonlin1.cpp  nonlin1cpp.cpp  surface1.cpp  surface1cpp.cpp
lib/: CMakeLists.txt  decls.h  lmcurve.c  lmcurve.h  lmcurve_tyd.c  lmcurve_tyd.h  lmdecls.h  lmfit.hpp  lminvert.c  lminvert.h  lmmin.c  lmmin.h  lmstruct.h
pythondemo/: curve1.py  nonlin1.py  surface1.py
swig/: CMakeLists.txt  lmfit.i
test/: CMakeLists.txt
